--- a/app/Resources/views/base8.html.twig
+++ b/app/Resources/views/base8.html.twig
@@ -62,7 +62,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="">Notas a Gaimusho</a>
+                            <a href="{{ path('notas') }}">Notas a Gaimusho</a>
                         </li>
                         <li>
                             <a href="{{ path('Memoi') }}">Memorandum</a>
