--- a/src/Embajada/OrhBundle/Resources/views/Compensatorios/index.html.twig
+++ b/src/Embajada/OrhBundle/Resources/views/Compensatorios/index.html.twig
@@ -1,16 +1,15 @@
 {% extends "::base8.html.twig" %}
 {% block body %}
 <style>
-a{
+.rojo{
     color: red;
 }
-.icon-ok-sign{
-    color: green;
-    font-size: 12px;
-
-}
-table tr td .aprobado{
+#centrado{
     text-align: center;
+}
+.icon-minus-sign{
+    color:red;
+    font-size: 20px;
 }
 </style>
 <div class="row-fluid">
@@ -26,24 +25,34 @@ table tr td .aprobado{
                     <tr>
                         <th>Id</th>
                         <th>Nombre</th>
-                        <th>Diasdecompensatorio</th>
-                        <th>Fechadesolicitud</th>
-                        <th>Fechadeaprobado</th>
-                        <th>Estado</th>
-                        <th>Actions</th>
+                        <th>Nro. de registros</th>
+                        <th>Fecha de solicitud</th>
+                        <th>Fecha de aprobado</th>
+                        <th id="centrado">Estado</th>
+                        <th>Acciones</th>
                     </tr>
                 </thead>
                 <tbody>
                 {% for entity in entities %}
                     <tr>
-                        <td style="font-size:20px"><a target="_blank" href="{{ path('compensatorios_pdf', { 'id': entity.id }) }}"><i class="icon-file"></i></a></td>
+                        <td style="font-size:20px"><a class="rojo" target="_blank" href="{{ path('compensatorios_pdf', { 'id': entity.id }) }}"><i class="icon-file"></i></a></td>
                         <td>{{entity.ucreado.name}} {{entity.ucreado.apellidos}}</td>
                         <td>{{ entity.diasdecompensatorio }}</td>
                         <td>{% if entity.fechadesolicitud %}{{ entity.fechadesolicitud|date('Y-m-d H:i:s') }}{% endif %}</td>
                         <td>{% if entity.fechadeaprobado %}{{ entity.fechadeaprobado|date('Y-m-d H:i:s') }}{% endif %}</td>
-                        <td>{{ entity.estado }}</td>
+                        <td id="centrado">
+                            {% if entity.estado==2 %}
+                                <i class="icon-minus-sign"></i>
+                            {% endif %}
+                            {% if entity.estado==1 %}
+                            <i style="color:green; font-size:20px" class="icon-ok-sign"></i>
+                            {% endif %}
+                            {% if entity.estado==0 %}
+                                <i style="color:peru; font-size:20px" class="icon-time "></i>
+                            {% endif %}
+                        </td>
                         <td>
-                            <a href="{{ path('compensatorios_edit', { 'id': entity.id }) }}">editar</a>
+                            <a class="rojo" href="{{ path('compensatorios_edit', { 'id': entity.id }) }}">editar</a>
                         </td>
                     </tr>
                 {% endfor %}
