--- a/src/Embajada/OrhBundle/Resources/views/Compensatorios/emailrespuestaderegistro.html.twig
+++ b/src/Embajada/OrhBundle/Resources/views/Compensatorios/emailrespuestaderegistro.html.twig
@@ -10,12 +10,16 @@
 <body>
     <table cellpadding="0" cellspacing="0" style="width:100%;" width="100%">
         <tr style="background: #1BE022; color: #FFF;">
-            <td style="padding: 1em;"><a style="color: #FFF; font-size: 21px; text-decoration: none;" >Solicitud de Registro de Compensatorios</a></td>
-            <td style="text-align: right; padding: 1em;">{% if entity.fechadesolicitud %}{{ entity.fechadesolicitud|date('d-m-Y') }}{% endif %}<span style="color: #FFF; display: block; font-size: 18px;"></span></td>
+            <td style="padding: 1em;"><a style="color: #FFF; font-size: 21px; text-decoration: none;" >Estado de Registro de Compensatorios</a></td>
+            <td style="text-align: right; padding: 1em;">{% if entity.fechadeaprobado %}{{ entity.fechadeaprobado|date('d-m-Y') }}{% endif %}<span style="color: #FFF; display: block; font-size: 18px;"></span></td>
         </tr>
 
         <tr>
-            <td colspan="2" style="font-size: 18px; padding: 1em .5em;"><br>La presente es para comunicarle que el se&ntilde;or (a) {{ entity.ucreado.name }} {{ entity.ucreado.apellidos }} ha solicitado el registro de {{ entity.diasdecompensatorio}} dia(s). </td>
+            <td colspan="2" style="font-size: 18px; padding: 1em .5em;"><br>La presente es para comunicarle que con fecha {% if entity.fechadeaprobado %}{{ entity.fechadeaprobado|date('d-m-Y') }}{% endif %} ha sido {%if entity.estado==1 %}aprobada {% else %}denegada{% endif%} su solicitud por el Jefe de Cancilleria <br>
+            {% if entity.estado==1 %}
+            Usted tiene 10 días para hacer uso de esto(s), despues de este periodo, no podra ejercerlo.
+            {% endif %}
+            </td>
         </tr>
         <tr>
             <td style="padding-top: 5px;">
@@ -25,9 +29,6 @@
             <td style="padding-top: 20px;">&nbsp;</td>
         </tr>
         <tr>
-            <td>
-                <a href="http://192.168.0.250{{ path('compensatorios_aprobarregistro', { 'id': entity.id }) }}" style="background:#0066FF ; border-radius: 5px; color: #FFF; font-size: 21px; padding: .5em 1em; text-decoration: none;" >Ver solicitud</a>
-            </td>
             <td style="font-size: 28px; padding: .5em;">
                  <strong style="color: #C06; padding-left: 1em;"></strong>
             </td>
