--- a/src/Embajada/OrhBundle/Resources/views/Compensatorios/pdf.html.twig
+++ b/src/Embajada/OrhBundle/Resources/views/Compensatorios/pdf.html.twig
@@ -74,53 +74,58 @@
     <table border="1px" class="tabulaciones">
         <tr>
             <td width="75px" align="center" class="margensuperior">Fecha</td>
-            <td width="220px">Actividad</td>
+            <td width="180px">Actividad</td>
             <td width="40px">Hora Inicio</td>
             <td width="52px">Hora de Termino</td>
+            <td width="40px">Horas</td>
             <td width="120px">Autoridad que solicito requerimiento</td>
         </tr>
         <tr>
-            <td>{% if entity.fechadeevento1 %}{{ entity.fechadeevento1|date('Y-m-d') }}{% endif %}</td>
+            <td>{% if entity.fechadeevento1 %}{{ entity.fechadeevento1|date('d-m-Y') }}{% endif %}</td>
             <td>{{entity.actividad1}}</td>
             <td>{% if entity.horadeinicio %}{{ entity.horadeinicio|date('H:m') }}{% endif %}</td>
             <td>{% if entity.horadefin1 %}{{ entity.horadefin1|date('H:m') }}{% endif %}</td>
+            <td align="center">{{ entity.cantidaddehoras1 }}</td>
             <td>Embajador</td>
         </tr>
         {% if entity.diasdecompensatorio >=2 %}
         <tr>
-            <td>{% if entity.fechadeevento2 %}{{ entity.fechadeevento2|date('Y-m-d') }}{% endif %}</td>
+            <td>{% if entity.fechadeevento2 %}{{ entity.fechadeevento2|date('d-m-Y') }}{% endif %}</td>
             <td>{{entity.actividad2}}</td>
             <td>{% if entity.horadeinicio2 %}{{ entity.horadeinicio2|date('H:m') }}{% endif %}</td>
             <td>{% if entity.horadefin2 %}{{ entity.horadefin2|date('H:m') }}{% endif %}</td>
+            <td align="center">{{ entity.cantidaddehoras2 }}</td>
             <td>Embajador</td>
         </tr>
         {% endif %}
         {% if entity.diasdecompensatorio >=3 %}
         <tr>
-            <td>{% if entity.fechadeevento3 %}{{ entity.fechadeevento3|date('Y-m-d') }}{% endif %}</td>
+            <td>{% if entity.fechadeevento3 %}{{ entity.fechadeevento3|date('d-m-Y') }}{% endif %}</td>
             <td>{{entity.actividad3}}</td>
             <td>{% if entity.horadeinicio3 %}{{ entity.horadeinicio3|date('H:m') }}{% endif %}</td>
             <td>{% if entity.horadefin3 %}{{ entity.horadefin3|date('H:m') }}{% endif %}</td>
+            <td align="center">{{ entity.cantidaddehoras3 }}</td>
             <td>Embajador</td>
         </tr>
         {% endif %}
         {% if entity.diasdecompensatorio >=4 %}
         <tr>
-            <td>{% if entity.fechadeevento4 %}{{ entity.fechadeevento4|date('Y-m-d') }}{% endif %}</td>
+            <td>{% if entity.fechadeevento4 %}{{ entity.fechadeevento4|date('d-m-Y') }}{% endif %}</td>
             <td>{{entity.actividad4}}</td>
             <td>{% if entity.horadeinicio4 %}{{ entity.horadeinicio4|date('H:m') }}{% endif %}</td>
             <td>{% if entity.horadefin4 %}{{ entity.horadefin4|date('H:m') }}{% endif %}</td>
+            <td align="center">{{ entity.cantidaddehoras4 }}</td>
             <td>Embajador</td>
         </tr>
         {% endif %}
         <p></p>
-    <table>
-        <tr>
-            <td width="150"></td>
-            <td align="center">Firma del Solicitante</td>
-            <td width="200"></td>
-        </tr>
-    </table>
+        <table>
+            <tr>
+                <td width="150"></td>
+                <td align="center">Firma del Solicitante</td>
+                <td width="200"></td>
+            </tr>
+        </table>
     </table>
 
 </body>
